Modify .env.example for production settings
Updated database configuration and allowed hosts for production.

--- a/.env.example
+++ b/.env.example
@@ -3,17 +3,22 @@ SECRET_KEY = 'django-insecure-nd)gw=sc=%-w2a8wxg0)&rs0f!u7_^wn^a40@(w%eoe((-&r^h
 
 
 
-ALLOWED_HOSTS=127.0.0.1,localhost
-DB_USER=school_user
-DB_PASSWORD=1234m
-DB_NAME=school_db
-DB_HOST=127.0.0.1
-DB_PORT=3306
 
-# Database settings
+# DEBUG mode (False for production)
+DEBUG=False
+
+# Allowed hosts
+ALLOWED_HOSTS=student-management-4-q9lt.onrender.com
+
+# Database configuration (use Render MySQL database credentials)
+DB_NAME=your_render_db_name
+DB_USER=your_render_db_user
+DB_PASSWORD=your_render_db_password
+DB_HOST=your_render_db_host
+DB_PORT=your_render_db_port
+
+# Other optional settings
+TIME_ZONE=Asia/Kolkata
 
 
-
-DEBUG=True
-# Django settings
 
